# ten-framework

./: .gitattributes  .gitignore  Agent 模块深度解析.md  RAG 检索集成方案.md  README.md  biome.json  extension.py代码详解.md  package-lock.json  package.json  ten-frameworks.md
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yml  from_scratch.yml  linux_arm64.yml  linux_ubuntu2204.yml  mac_arm64.yml  mac_x64.yml  tman_full_linux_arm64.yml  tman_full_linux_x64.yml  tman_full_mac_arm64.yml  tman_full_mac_x64.yml  tman_full_win_x64.yml  win.yml
ai_agents/: CLAUDE-zh.md  CLAUDE.md  docker-compose.yml  myclaude.md  pyrightconfig.json
ai_agents/agents/examples/: .gitignore
ai_agents/agents/examples/demo/tenapp/: manifest-lock.json
ai_agents/agents/examples/memory-memos-example/: Dockerfile  README.md
ai_agents/agents/examples/memory-memos-example/tenapp/: manifest-lock.json  property.json
ai_agents/agents/examples/rag-retrieval-demo/: README-zh.md
ai_agents/agents/examples/rag-retrieval-demo/scripts/: install.sh  start.sh  stop.sh
ai_agents/agents/examples/rag-retrieval-demo/tenapp/: go.mod  main.go  manifest.json  property.json
ai_agents/agents/examples/speechmatics-diarization/tenapp/: manifest-lock.json  manifest.json
ai_agents/agents/examples/stepfun-demo/tenapp/: manifest-lock.json
ai_agents/agents/examples/transcription/frontend/: bun.lockb
ai_agents/agents/examples/transcription/tenapp/: manifest-lock.json
ai_agents/agents/examples/voice-assistant/: Dockerfile  Taskfile.docker2.yml
ai_agents/agents/examples/voice-assistant-live2d/: Dockerfile  README-zh.md  README.md  Taskfile.yml  result_of_RAGFlow.json
ai_agents/agents/examples/voice-assistant-live2d/frontend/: env.example  next.config.mjs
ai_agents/agents/examples/voice-assistant-live2d/tenapp/: manifest-lock.json  manifest.json  property.json
ai_agents/agents/examples/voice-assistant-nodejs/tenapp/: manifest-lock.json  manifest.json
ai_agents/agents/examples/voice-assistant-realtime/tenapp/: manifest-lock.json
ai_agents/agents/examples/voice-assistant-sip-twilio/tenapp/: manifest-lock.json  manifest.json
ai_agents/agents/examples/voice-assistant-video/: Taskfile.yml  ollama_qwen_vl_demo.py
ai_agents/agents/examples/voice-assistant-video/tenapp/: manifest-lock.json  manifest.json  property.json
ai_agents/agents/examples/voice-assistant-with-memU/tenapp/: manifest-lock.json  manifest.json
ai_agents/agents/examples/voice-assistant-with-ten-vad/tenapp/: manifest-lock.json  manifest.json
ai_agents/agents/examples/voice-assistant-with-turn-detection/cerebrium/: Dockerfile  docker-build.sh  docker-compose.yml  docker-start.sh  docker-stop.sh  main_server.py  requirements.txt  test.py
ai_agents/agents/examples/voice-assistant-with-turn-detection/tenapp/: manifest-lock.json  manifest.json  property.json
ai_agents/agents/examples/voice-assistant/playground/: .env  package-lock.json
ai_agents/agents/examples/voice-assistant/tenapp/: .env  manifest-lock.json  property.json
ai_agents/agents/examples/websocket-example/: Dockerfile  README.md  Taskfile.yml
ai_agents/agents/examples/websocket-example/frontend/: biome.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js
ai_agents/agents/examples/websocket-example/tenapp/: manifest-lock.json  manifest.json  property.json
ai_agents/agents/integration_tests/asr_guarder/tests/: test_multi_language.py
ai_agents/agents/integration_tests/tts_guarder/tests/: test_basic_audio_setting.py  test_corner_input.py  test_dump.py  test_dump_each_request_id.py  test_flush.py  test_invalid_required_params.py  test_invalid_text_handling.py  test_metrics.py  test_miss_required_params.py
ai_agents/agents/ten_packages/extension/aliyun_asr_bigmodel_local_python/: TEN扩展开发完整指南-zh.md  TEN扩展开发完整指南.md  addon.py  config.py  extension.py  funasr_adapter.py  funasr_client_api.py  manifest.json  property.json  requirements.txt  代码解读.md
ai_agents/agents/ten_packages/extension/aliyun_asr_bigmodel_python/: extension.py
ai_agents/agents/ten_packages/extension/assemblyai_asr_python/: extension.py
ai_agents/agents/ten_packages/extension/aws_asr_python/: extension.py
ai_agents/agents/ten_packages/extension/bytedance_asr/: extension.py
ai_agents/agents/ten_packages/extension/bytedance_llm_based_asr/: config.py  extension.py  manifest.json  property.json  volcengine_asr_client.py
ai_agents/agents/ten_packages/extension/cartesia_tts/: README.md  config.py  extension.py  manifest.json  property.json  requirements.txt
ai_agents/agents/ten_packages/extension/cosy_tts_python/: extension.py  manifest.json  property.json
ai_agents/agents/ten_packages/extension/coze_llm2_python/: extension.py
ai_agents/agents/ten_packages/extension/deepgram_asr_python/: extension.py
ai_agents/agents/ten_packages/extension/dify_llm2_python/: extension.py
ai_agents/agents/ten_packages/extension/fish_audio_tts_python/: fish_audio_tts.py  manifest.json
ai_agents/nginx/: nginx.conf
ai_agents/nginx/conf.d/: default.conf
ai_agents/playground/: package-lock.json  package.json  tsconfig.json
ai_agents/playground/src/: proxy.tsx
ai_agents/playground/src/common/: moduleConfig.ts
ai_agents/scripts/: generate-ssl-cert.sh  reload-nginx-config.sh  restart-nginx.sh  start-with-nginx.sh  stop-with-nginx.sh  view-nginx-logs.sh
core/include_internal/ten_runtime/common/: version.h
core/src/ten_manager/designer_frontend/: package.json
core/src/ten_manager/src/: version.rs
core/src/ten_runtime/: manifest.json
core/src/ten_utils/: BUILD.gn
docs/: README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md
docs/getting-started/: quick-start.cn.md  quick-start.md
tests/ten_runtime/: BUILD.gn
tests/ten_runtime/smoke/graph_communication/: graph_communication_basic_3.cc
tools/tman/: install_tman.sh
(+290 files in other folders)
